objects/ssot__NetworkUsage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageAvailabilityNumber__c</fullName>
        <label>Average Availability (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageCallDropRate__c</fullName>
        <label>Average Call Drop Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageCallSetupSuccessRate__c</fullName>
        <label>Average Call Setup Success Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageErrorRate__c</fullName>
        <label>Average Error Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageJitterNumber__c</fullName>
        <label>Average Jitter (ms)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageLatencyNumber__c</fullName>
        <label>Average Latency (ms)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageMeanOpinionScoreNumber__c</fullName>
        <label>Average Mean Opinion Score (MOS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AveragePacketLossNumber__c</fullName>
        <label>Average Packet Loss (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageResponseTimeNumber__c</fullName>
        <label>Average Response Time (ms)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageThroughputDownloadNumber__c</fullName>
        <label>Average Throughput Download (bps)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageThroughputUploadNumber__c</fullName>
        <label>Average Throughput Upload (bps)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageTimeToRepairNumber__c</fullName>
        <label>Average Time To Repair (TTR)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationAddress__c</fullName>
        <label>Destination Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationVolumeUOMId__c</fullName>
        <label>Duration Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Network Usage Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkActivityType__c</fullName>
        <label>Network Activity Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkLocationName__c</fullName>
        <label>Network Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsageEndDateTime__c</fullName>
        <label>Network Usage End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsageStartDateTime__c</fullName>
        <label>Network Usage Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkUsage_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>NetworkUsage_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ProtocolName__c</fullName>
        <label>Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceAddress__c</fullName>
        <label>Source Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageVolumeNumber__c</fullName>
        <label>Usage Volume</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsageVolumeUOMId__c</fullName>
        <label>Usage Volume Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283030236_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_DurationVolumeUOMId_map_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_DurationVolumeUOMId_map_rel</relationshipLabel>
        <relationshipName>rel_1720283030236_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720283032059_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_UsageVolumeUOMId_map_Un_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_UsageVolumeUOMId_map_Un_rel</relationshipLabel>
        <relationshipName>rel_1720283032059_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291043350_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkUsage_AccountId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>NetworkUsage_AccountId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1720291043350_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>